--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,18 @@
   "bugs": {
     "url": "https://github.com/BlueHC/TTHack-2018--Waschorder-Container-Waschanlage-1/issues"
   },
-  "homepage": "https://github.com/BlueHC/TTHack-2018--Waschorder-Container-Waschanlage-1#readme"
+  "homepage": "https://github.com/BlueHC/TTHack-2018--Waschorder-Container-Waschanlage-1#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongoose": "^5.0.15",
+    "typescript": "^2.8.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/cors": "^2.8.3",
+    "@types/express": "^4.11.1",
+    "@types/mongoose": "^5.0.10"
+  }
 }
