--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.0.15",
+    "nodemon": "^1.17.3",
     "typescript": "^2.8.3",
     "winston": "^2.4.2"
   },
