--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/BlueHC/TTHack-2018--Waschorder-Container-Waschanlage-1#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
