--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon -e ts dist/server.js"
+    "start": "tsc && nodemon dist/server.js"
   },
   "repository": {
     "type": "git",
